--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         clima: "Temperado continental, com verões quentes e invernos frios e nevados.",
                         economia: "Finanças, educação, saúde, tecnologia, turismo.",
                         ecossistemas: 4,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Nordeste"
+                        imageUrl: "images/Times Square.jpeg"
                     },
                     sul: {
                         nome: "Sul ☀️",
