--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                         clima: "Continental temperate, with hot summers and cold, snowy winters.",
                         economia: "Finance, education, healthcare, technology, tourism.",
                         ecossistemas: 4,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Northeast"
+                        imageUrl: "images/Times Square.jpeg"
                     },
                     sul: {
                         nome: "South ☀️",
