--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         clima: "Subtropical úmido, com verões quentes e úmidos e invernos amenos.",
                         economia: "Agricultura, indústria (manufatura, automotiva), turismo, energia.",
                         ecossistemas: 5,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Sul"
+                        imageUrl: "images/Jonesborough, Tennessee.jpeg"
                     },
                     "centro-oeste": {
                         nome: "Centro-Oeste 🌾",
@@ -418,7 +418,7 @@
                         clima: "Continental, com grandes variações de temperatura entre verões quentes e invernos frios.",
                         economia: "Agricultura (milho, soja, trigo), indústria (automobilística, maquinário), processamento de alimentos.",
                         ecossistemas: 3,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Centro-Oeste"
+                        imageUrl: "images/American Chicago.jpeg"
                     },
                     sudoeste: {
                         nome: "Sudoeste 🏜️",
@@ -426,7 +426,7 @@
                         clima: "Árido e semiárido, com verões muito quentes e invernos amenos a frios, dependendo da altitude.",
                         economia: "Turismo, energia (petróleo, gás, solar), agricultura irrigada, tecnologia.",
                         ecossistemas: 6,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Sudoeste"
+                        imageUrl: "images/GRAND CANYON ULUSAL PARKI  SOUTH RIM  AZ.jpeg"
                     },
                     oeste: {
                         nome: "Oeste/Costa Oeste 🏞️",
@@ -434,7 +434,7 @@
                         clima: "Variado: mediterrâneo na Califórnia, marítimo temperado no noroeste, alpino nas montanhas, desértico no interior.",
                         economia: "Tecnologia, entretenimento, turismo, agricultura (especialmente na Califórnia), comércio internacional.",
                         ecossistemas: 7,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Oeste"
+                        imageUrl: "images/download (21).jpeg"
                     }
                 },
                 relevoHidrografiaData: {
@@ -545,7 +545,7 @@
                         clima: "Humid subtropical, with hot, humid summers and mild winters.",
                         economia: "Agriculture, industry (manufacturing, automotive), tourism, energy.",
                         ecossistemas: 5,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=South"
+                        imageUrl: "images/Jonesborough, Tennessee.jpeg"
                     },
                     "centro-oeste": {
                         nome: "Midwest 🌾",
@@ -553,7 +553,7 @@
                         clima: "Continental, with large temperature variations between hot summers and cold winters.",
                         economia: "Agriculture (corn, soybeans, wheat), industry (automotive, machinery), food processing.",
                         ecossistemas: 3,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Midwest"
+                        imageUrl: "images/American Chicago.jpeg"
                     },
                     sudoeste: {
                         nome: "Southwest 🏜️",
@@ -561,7 +561,7 @@
                         clima: "Arid and semi-arid, with very hot summers and mild to cold winters, depending on altitude.",
                         economia: "Tourism, energy (oil, gas, solar), irrigated agriculture, technology.",
                         ecossistemas: 6,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Southwest"
+                        imageUrl: "images/GRAND CANYON ULUSAL PARKI  SOUTH RIM  AZ.jpeg"
                     },
                     oeste: {
                         nome: "West/West Coast 🏞️",
@@ -569,7 +569,7 @@
                         clima: "Varied: Mediterranean in California, temperate maritime in the northwest, alpine in the mountains, desert in the interior.",
                         economia: "Technology, entertainment, tourism, agriculture (especially in California), international trade.",
                         ecossistemas: 7,
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=West"
+                        imageUrl: "images/download (21).jpeg"
                     }
                 },
                 relevoHidrografiaData: {
