--- a/index.html
+++ b/index.html
@@ -441,22 +441,22 @@
                     montanhas: {
                         titulo: "Cadeias de Montanhas ⛰️",
                         texto: "Os EUA possuem duas grandes cadeias montanhosas principais: as <span class='font-semibold text-emerald-600'>Montanhas Rochosas</span> no oeste, mais jovens, altas e imponentes, e os <span class='font-semibold text-emerald-600'>Montes Apalaches</span> no leste, mais antigos, erodidos e de altitudes menores. Essas montanhas influenciam o clima (criando 'sombras de chuva'), a distribuição de recursos hídricos e os padrões de assentamento humano. Outras cadeias importantes incluem a Sierra Nevada e as Montanhas Cascade no Oeste.",
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Montanhas"
+                        imageUrl: "images/Denali National Park, Alaska 🇺🇸.jpeg"
                     },
                     planicies: {
                         titulo: "Grandes Planícies 🌾",
                         texto: "Localizadas no coração do país, a leste das Montanhas Rochosas, as <span class='font-semibold text-emerald-600'>Grandes Planícies</span> são uma vasta extensão de terras relativamente planas ou suavemente onduladas. Historicamente cobertas por pradarias, hoje são uma das regiões agrícolas mais produtivas do mundo, essenciais para o cultivo de grãos como trigo e milho. Estendem-se do Canadá ao Texas.",
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Planicies"
+                        imageUrl: "images/Montana Past, present and future _ Great Plains, Montana _ Facebook.jpeg"
                     },
                     "rios-lagos": {
                         titulo: "Rios e Lagos 🌊",
                         texto: "O sistema fluvial dos EUA é extenso. O <span class='font-semibold text-emerald-600'>Rio Mississippi</span>, junto com seus afluentes como o Missouri e o Ohio, forma uma das maiores bacias hidrográficas do mundo, crucial para o transporte e agricultura. No nordeste, os <span class='font-semibold text-emerald-600'>Grandes Lagos</span> (Superior, Michigan, Huron, Erie, Ontário) constituem a maior reserva de água doce superficial do planeta e são vitais para a navegação e indústria. Outros rios importantes incluem o Colorado no Sudoeste e o Columbia no Noroeste.",
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Rios+e+Lagos"
+                        imageUrl: "images/The Mississippi River - Minnesota_.jpeg"
                     },
                     litoral: {
                         titulo: "Litoral 🏖️",
                         texto: "Os EUA possuem um litoral extenso e diversificado, banhado por três oceanos: Atlântico, Pacífico e Ártico, além do Golfo do México. A <span class='font-semibold text-emerald-600'>Costa Atlântica</span> varia de praias arenosas no sul a costas rochosas e recortadas no norte. A <span class='font-semibold text-emerald-600'>Costa do Pacífico</span> é conhecida por suas falésias, praias e a instabilidade geológica da Falha de San Andreas. O litoral do <span class='font-semibold text-emerald-600'>Golfo do México</span> é caracterizado por planícies costeiras baixas e deltas. Essas áreas costeiras são cruciais para o comércio, pesca, turismo e abrigam grandes centros populacionais.",
-                        imageUrl: "https://placehold.co/300x200/a8a29e/ffffff?text=Litoral"
+                        imageUrl: "images/California.jpeg"
                     }
                 },
                 riosChartLabels: ['Missouri', 'Mississippi', 'Colorado', 'Ohio', 'Hudson'],
